Murphy System/outputs/workspace_output_1769204750_5688.txt
/workspace/main_script.js:14
        let currentConnections = [];
            ^

SyntaxError: Identifier 'currentConnections' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v20.19.6
